# q-haderslev-vbo

./: .gitignore  README.md  pyproject.toml
q_haderslev_vbo/: browser_session.py  pw_faelles_kommunal_login_idp.py
q_haderslev_vbo/automation_server/: api_token_credentials.py  ats_credentials_database.py  ats_database_connection.py  ats_deferred_items.py  ats_find_state.py  ats_is_item_in_queue.py  ats_itemstatus_to_new.py  ats_queue_status.py  ats_sharepoint.py  ats_update_item_data.py  ats_workitem_api.py
q_haderslev_vbo/automation_server/sharepoint/: sp_api.py  sp_auth.py  sp_client.py  sp_items.py
q_haderslev_vbo/diverse/: cpr_alder.py
q_haderslev_vbo/playwright/: browser_session.py  faelles_kommunal_login_idp.py  playwright_debughelper.py  playwright_run_recorder.py
tests/: test_ats_database_connection.py  test_check_pending_items_in_queue.py  test_cpr_alder.py  test_get_completed_items_in_period.py  test_is_item_in_queue.py  test_print_screen_sharepoint.py  test_sp_files.py
