[project]
name = "q-haderslev-vbo"
version = "0.1.2"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.59.0",
    "automation-server-client",
    "requests>=2.31.0",
    "psycopg2-binary",
]
[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.3.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["q_haderslev_vbo"] #Husk det ikke skal være bindestreg og navnet 



